--- a/README.org
+++ b/README.org
@@ -70,10 +70,12 @@ The following faces can be set to ones liking. Either by the theme or with =set-
 ** control section display
 You can elect to display some sections or not by using the following variables:
 
-- =timu-line-show-vc-branch=
-- =timu-line-show-python-virtual-env=
-- =timu-line-show-org-capture-hints=
-- =timu-line-show-mu4e-context=
+- timu-line-show-vc-branch :: default value is =t=
+- timu-line-show-lsp-indicator :: default value is =nil=
+- timu-line-show-eglot-indicator :: default value is =nil=
+- timu-line-show-python-virtual-env :: default value is =t=
+- timu-line-show-org-capture-hints :: default value is =t=
+- timu-line-show-mu4e-context :: default value is =t=
 
 ** modes for mu4e context
 =timu-line-mu4e-context-modes= is a custom variable containing a list of major modes in which to display the mu4e context in the mode line.
