--- a/README.org
+++ b/README.org
@@ -40,6 +40,7 @@ The following is displayed in appropriate buffers only:
 
 ** Left side
 - Display hint =k= when a kbd macro is running
+- Display evil state
 - Display buffer/file name
 - Display keybinds for org capture in the capture buffer
 - Display the vc branch
@@ -78,6 +79,7 @@ You can elect to display some sections or not by using the following variables:
 - timu-line-show-org-capture-hints :: default value is =t=
 - timu-line-show-mu4e-context :: default value is =t=
 - timu-line-show-elfeed-counts :: default value is =t=
+- timu-line-show-evil-state :: default value is =nil=
 
 ** modes for mu4e context
 =timu-line-mu4e-context-modes= is a custom variable containing a list of major modes in which to display the mu4e context in the mode line.
