--- a/README.org
+++ b/README.org
@@ -56,7 +56,7 @@ The following is displayed in appropriate buffers only:
 - Display column number of the point
 
 * Options
-** faces
+** Faces
 The following faces can be set to ones liking. Either by the theme or with =set-face-attribute=.
 
 - =timu-line-background-active-face=
@@ -69,24 +69,25 @@ The following faces can be set to ones liking. Either by the theme or with =set-
 - =timu-line-modified-face=
 - =timu-line-read-only-face=
 
-** control section display
+** Control section display
 You can elect to display some sections or not by using the following variables:
 
 - timu-line-show-vc-branch :: default value is =t=
 - timu-line-show-lsp-indicator :: default value is =nil=
 - timu-line-show-eglot-indicator :: default value is =nil=
 - timu-line-show-python-virtual-env :: default value is =t=
-- timu-line-show-org-capture-hints :: default value is =t=
+- timu-line-show-org-capture-keys :: default value is =t=
 - timu-line-show-mu4e-context :: default value is =t=
 - timu-line-show-elfeed-counts :: default value is =t=
 - timu-line-show-evil-state :: default value is =nil=
 
-** modes for mu4e context
+** Org capture hint for keybindings
+The variable =timu-line-org-capture-keys-string= contains the string to show in the mode line as keybindings hint in the org capture buffer.
+
+** Modes for mu4e context
 =timu-line-mu4e-context-modes= is a custom variable containing a list of major modes in which to display the mu4e context in the mode line.
 
-You can of course change this to your liking.
-
-** modes for mu4e context
+** Modes for mu4e context
 =timu-line-elfeed-modes= controls in which modes the custom elfeed string is displayed.
 
 * License
