--- a/README.org
+++ b/README.org
@@ -81,6 +81,7 @@ You can elect to display some sections or not by using the following variables:
 - timu-line-show-mu4e-context :: default value is =t=
 - timu-line-show-elfeed-counts :: default value is =t=
 - timu-line-show-evil-state :: default value is =nil=
+- timu-line-show-tramp-host :: default value is =nil=
 
 ** Org capture hint for keybindings
 The variable =timu-line-org-capture-keys-string= contains the string to show in the mode line as keybindings hint in the org capture buffer.
