--- a/README.org
+++ b/README.org
@@ -90,7 +90,8 @@ The following is displayed in appropriate buffers only:
 - Display evil state
 - Display Tramp host if applicable
 - Display buffer/file name
-- Display keybinds for org capture in the capture buffer
+- Display keybindings hint for org capture in the capture buffer
+- Display keybindings hint for git commit message in the message buffer
 - Display the vc branch
 - Display the python venv
 - Display Mu4e context
@@ -126,6 +127,7 @@ You can elect to display some sections or not by using the following variables:
 - timu-line-show-eglot-indicator :: default value is =nil=
 - timu-line-show-python-virtual-env :: default value is =t=
 - timu-line-show-org-capture-keys :: default value is =t=
+- timu-line-show-git-commit-keys :: default value is =t=
 - timu-line-show-mu4e-context :: default value is =t=
 - timu-line-show-mu4e-index-update-indicator :: default value is =nil=
 - timu-line-show-elfeed-counts :: default value is =t=
