--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -9,8 +9,11 @@
 
 All notable changes to the "timu-line" package will be documented in this file.
 
-* 2024-11-06 - [version 1.0]
-- Add emacs-monkeytype support
+* 2025-01-10 - [version 1.2]
+- Add Keybinding hint for git commit message buffer
+
+* 2025-01-06 - [version 1.1]
+- Add mu4e index update indicator
 
 * 2024-04-05 - [version 0.9]
 - Get rid of the requirement for the f library
