--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -9,6 +9,9 @@
 
 All notable changes to the "timu-line" package will be documented in this file.
 
+* 2025-01-12 - [version 1.4]
+- Try to gracefully force update the mode-line
+
 * 2025-01-10 - [version 1.3]
 - Add Keybinding hint for forge post buffer
 
