--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -9,6 +9,9 @@
 
 All notable changes to the "timu-line" package will be documented in this file.
 
+* 2026-01-21 - [version 1.6]
+- Add Keybinding hint for the org log note buffer
+
 * 2025-02-27 - [version 1.5]
 - Add Keybinding hint for the wdired buffer
 
