--- a/README.org
+++ b/README.org
@@ -92,6 +92,7 @@ The following is displayed in appropriate buffers only:
 - Display buffer/file name
 - Display keybindings hint for the wdired buffer
 - Display keybindings hint for the org capture buffer
+- Display keybindings hint for the org log note buffer
 - Display keybindings hint for the git commit message buffer
 - Display keybindings hint for the forge post buffer
 - Display the vc branch
@@ -133,6 +134,7 @@ You can elect to display some sections or not by using the following variables:
 - timu-line-show-org-capture-keys :: default value is =t=
 - timu-line-show-git-commit-keys :: default value is =t=
 - timu-line-show-forge-post-keys :: default value is =t=
+- timu-line-show-org-log-note-keys :: default value is =nil=
 - timu-line-show-mu4e-context :: default value is =t=
 - timu-line-show-mu4e-index-update-indicator :: default value is =nil=
 - timu-line-show-elfeed-counts :: default value is =t=
